# edge-node-runtime

./: .dockerignore  .env  .env.example  .gitignore  .mcp.json  AGENTS.md  AUTONOMOUSc Edge Node Setup.spec  CLAUDE.md  Dockerfile  Dockerfile.service  Dockerfile.single  Install AUTONOMOUSc Edge Node.cmd  Open AUTONOMOUSc Edge Node.cmd  README.md  Repair AUTONOMOUSc Edge Node.cmd  Stop AUTONOMOUSc Edge Node.cmd  app.ps1  app.sh  build-manager-image.ps1  build-manager-image.sh  build-single-image.ps1  build-single-image.sh  build-windows-installer.ps1  docker-compose.yml  install.ps1  install.sh  publish-latest-image.ps1  publish-latest-image.sh  publish-single-image.ps1  publish-single-image.sh  pyproject.toml  repair.ps1  repair.sh  start.ps1  start.sh  stop.ps1  stop.sh  windows-runtime-common.ps1
.build-venv/: pyvenv.cfg
scripts/: drain_assignments_once.py  generate_model_artifacts_manifest.py
test artifacts/: cheap-vast-gemma-node-launch-report-v6.json  cheap-vast-gemma-node-launch-report-v6b.json  cheap-vast-gemma-node-launch-report.json  long-lived-vast-gemma-e4b-20260501-115109.json  long-lived-vast-gemma-e4b-20260501-115603.json  long-lived-vast-gemma-e4b-20260501-115745.json  long-lived-vast-gemma-e4b-20260501-122323.json  long-lived-vast-gemma-e4b-20260501-125148.json  long-lived-vast-gemma-e4b-20260501-132533.json  long-lived-vast-gemma-e4b-20260501-140354.json  long-lived-vast-gemma-e4b-20260501-140441.json  long-lived-vast-gemma-e4b-20260501-142645.json  long-lived-vast-gemma-e4b-20260501-151722.json  tuned-cheap-vast-gemma-node-20260502-launch-report.json  tuned-cheap-vast-gemma-node-20260502-v2-launch-report.json
tests/: test_appliance_manifest.py  test_autopilot.py  test_autostart.py  test_cache_seed.py  test_config.py  test_control_plane.py  test_desktop_launcher.py  test_heat_governor.py  test_installer.py  (+12 more)
(+57 files in other folders)
