[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomousc-node-agent"
version = "0.1.0"
description = "AUTONOMOUSc edge node agent for the Docker appliance"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=43.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "qrcode>=8.0"
]

[project.scripts]
node-agent = "node_agent.main:main"
node-agent-bootstrap = "node_agent.main:bootstrap_entrypoint"
node-agent-installer = "node_agent.installer:main"
node-agent-service = "node_agent.service:main"
node-agent-launcher = "node_agent.launcher:main"
node-agent-single-container = "node_agent.single_container:main"
node-agent-fault-drill = "node_agent.fault_drills:main"
node-agent-vast-smoke = "node_agent.vast_smoke:main"
node-agent-staging-smoke = "node_agent.staging_smoke:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
node_agent = [
  "*.html",
  "*.json",
  "*.pub",
  "runtime_bundle/**/*",
  "runtime_bundle/.env.example"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
